--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Mark Marley Portfolio</title>
   </head>
 
   <body>
